Add FGDC 1998 CSDGM Version 001 reader Merge remote-tracking branch 'upstream/master'
# Conflicts:
#	Gemfile
#	Gemfile.lock

--- a/app/views/api/readers/index.html.erb
+++ b/app/views/api/readers/index.html.erb
@@ -22,6 +22,10 @@
 
  : Alaska Data Integration working group JSON metadata format
 
+ [fgdc](./readers/fgdc)
+
+ : Federal Geographic Data Committee - Content Standard for Digital Geospatial Metadata
+
  [sbJson](./readers/sbJson)
 
  : U.S. Geological Survey *ScienceBase* JSON metadata format
