--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,7 @@
 </h2>
 
 <%
-doc = <<-MARKDOWN
+doc = <<-MARKDOWN.gsub(/APP_ROOT/, ENV['RAILS_RELATIVE_URL_ROOT'] || '')
 
 ## Welcome to the mdTranslator
 
@@ -26,10 +26,10 @@ receives output in one of the mdTranslator's supported 'writer' formats.
 
 ## Links
 
- * Documentation of the mdTranslator's [API](./api/apis) for versions 1 and 2
- * List of supported mdTranslator [readers](./api/readers)
- * List of supported mdTranslator [writers](./api/writers)
- * Hosted [demo](./api/v2/demo) of mdTranslator V2 and it's options
+ * Documentation of the mdTranslator's [API](APP_ROOT/api/apis) for versions 1 and 2
+ * List of supported mdTranslator [readers](APP_ROOT/api/readers)
+ * List of supported mdTranslator [writers](APP_ROOT/api/writers)
+ * Hosted [demo](APP_ROOT/api/v2/demo) of mdTranslator V2 and it's options
  * Other Links ...
    - [Home page](http://www.adiwg.org/mdTranslator/) for the mdTranslator project
    - Online [mdTool](http://mdTools.adiwg.org/) for viewing the latest mdJson schema
