--- a/app/views/api/writers/index.html.erb
+++ b/app/views/api/writers/index.html.erb
@@ -18,6 +18,11 @@
 
 ## List of available writers for mdTranslator
 
+ [FGDC CSDGM](./writers/fgdc)
+
+ : Federal Geographic Data Committee's Content Standard for Digital Geospatial Metadata - FGDC-STD-001-1998
+ Includes Biological Data Profile
+
  [iso19115_2](./writers/iso19115_2)
 
  : International Standards Organization Geographic Information - Metadata 19115-2:2009
