--- a/app/views/api/v2/demos/show.html.erb
+++ b/app/views/api/v2/demos/show.html.erb
@@ -23,7 +23,8 @@
          var elem = document.getElementById('codeTextarea');
          var elemSource = document.getElementById('sbJsonExample');
       }
-      elem.innerHTML = elemSource.innerHTML;
+      elem.value = elemSource.value;
+      document.getElementById('element_2').value = exampleCode;
    }
 </script>
 
@@ -70,7 +71,7 @@
 				<div>
 					<select class="element select medium" id="element_2" name="reader">
                   <option value="mdJson" selected="selected">mdJson</option>
-                  <option value="fgdc">FGDC</option>
+                  <option value="fgdc">fgdc</option>
                   <option value="sbJson">sbJson</option>
 					</select>
 				</div>
@@ -83,7 +84,7 @@
 				<label class="description" for="element_3">Writer</label>
 				<div>
 					<select class="element select medium" id="element_3" name="writer">
-                  <option value="html" selected="selected">HTML</option>
+                  <option value="html" selected="selected">html</option>
                   <option value="fgdc">fgdc (beta)</option>
                   <option value="iso19115_2">iso19115_2</option>
 						<option value="iso19110">iso19110</option>
