--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  <%= render "layouts/nav" %>
+  <%= yield %>
 <span id="forkongithub"><a href="https://github.com/adiwg/mdTranslator-rails">Fork me on GitHub</a></span>
 </body>
 </html>
