--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,7 +26,7 @@ receives output in one of the mdTranslator's supported 'writer' formats.
 
 ## Links
 
- * Documentation of the mdTranslator's [API](APP_ROOT/api/apis) for versions 1 and 2
+ * Documentation of the mdTranslator's [API](APP_ROOT/api/apis)
  * List of supported mdTranslator [readers](APP_ROOT/api/readers)
  * List of supported mdTranslator [writers](APP_ROOT/api/writers)
  * Hosted [demo](APP_ROOT/api/v2/demo) of mdTranslator V2 and it's options
