Update API docs

--- a/app/views/api/apis/show.html.erb
+++ b/app/views/api/apis/show.html.erb
@@ -1,4 +1,12 @@
-<p>
-  <a href="/api/v3">version 3</a><strong> Latest</strong><br>
-  <a href="/api/v2">version 2</a>
-</p>
+<h2>API Documentation</h2>
+<p>Choose a version:</p>
+<ul>
+  <li>
+    <a href="/api/v3">version 3</a>
+    <strong>
+      Latest</strong>
+  </li>
+  <li>
+    <a href="/api/v2">version 2</a>
+  </li>
+</ul>
