--- a/app/views/api/v3/demos/show.html.erb
+++ b/app/views/api/v3/demos/show.html.erb
@@ -10,24 +10,7 @@
 #  Stan Smith 2017-05-19 refactored v1 demo for v3
 #  Stan Smith 2017-06-30 add buttons to insert mdJson or sbJson into JSON textarea
 -->
-<script type="text/javascript">
-   function insertText(exampleCode) {
-      if (exampleCode == 'mdJson') {
-         var elem = document.getElementById('codeTextarea');
-         var elemSource = document.getElementById('mdJsonExample');
-      }
-      if (exampleCode == 'fgdc') {
-         var elem = document.getElementById('codeTextarea');
-         var elemSource = document.getElementById('fgdcExample');
-      }
-      if (exampleCode == 'sbJson') {
-         var elem = document.getElementById('codeTextarea');
-         var elemSource = document.getElementById('sbJsonExample');
-      }
-      elem.value = elemSource.value;
-      document.getElementById('element_2').value = exampleCode;
-   }
-</script>
+
 
 <h2 id="mainHeader">
 	<%= image_tag "logo150.png", alt: "mdTranslator", class: "logo" %>
@@ -55,9 +38,9 @@
             <p class="guidelines" id="guide_1">
             <label class="description" for="element_1">Input Metadata File Area</label><br>
                <small>CLICK</small>
-               <input type="button" class="buttons" value="mdJson example" id="loadMdJson" onclick="insertText('mdJson');">
-               <input type="button" class="buttons" value="fgdc example" id="loadFgdc" onclick="insertText('fgdc');">
-               <input type="button" class="buttons" value="sbJson example" id="loadSbJson" onclick="insertText('sbJson');">
+               <input type="button" class="buttons" value="mdJson example" id="loadMdJson">
+               <input type="button" class="buttons" value="fgdc example" id="loadFgdc">
+               <input type="button" class="buttons" value="sbJson example" id="loadSbJson">
                <small>OR INSERT your metadata below ...</small>
             </p>
             <div>
@@ -173,5 +156,28 @@
 			<input id="saveForm" class="button_text" type="submit" name="submit" value="Submit"/>
 		</div>
 	<% end %>
+
+   <%= javascript_tag nonce: true do -%>
+      function insertText(exampleCode) {
+         if (exampleCode == 'mdJson') {
+            var elem = document.getElementById('codeTextarea');
+            var elemSource = document.getElementById('mdJsonExample');
+         }
+         if (exampleCode == 'fgdc') {
+            var elem = document.getElementById('codeTextarea');
+            var elemSource = document.getElementById('fgdcExample');
+         }
+         if (exampleCode == 'sbJson') {
+            var elem = document.getElementById('codeTextarea');
+            var elemSource = document.getElementById('sbJsonExample');
+         }
+         elem.value = elemSource.value;
+         document.getElementById('element_2').value = exampleCode;
+      }
+
+      document.getElementById('loadMdJson').addEventListener('click', () => insertText('mdJson'));
+      document.getElementById('loadFgdc').addEventListener('click', () => insertText('fgdc'));
+      document.getElementById('loadSbJson').addEventListener('click', () => insertText('sbJson'));
+   <% end -%>
 
 </div>
