use link_to to render hyperlinks so RAILS_RELATIVE_ROOT_URL works everywhere

--- a/app/views/api/apis/show.html.erb
+++ b/app/views/api/apis/show.html.erb
@@ -2,11 +2,11 @@
 <p>Choose a version:</p>
 <ul>
   <li>
-    <a href="/api/v3">version 3</a>
+    <%= link_to "version 3", "api/v3" %>
     <strong>
       Latest</strong>
   </li>
   <li>
-    <a href="/api/v2">version 2</a>
+    <%= link_to "version 2", "api/v2" %>
   </li>
 </ul>
