--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="nav">
   <ul>
-    <li><%= link_to "Home", '/', :class => current_class?('/') + " nav-link" %></li>
-    <li><%= link_to "API", '/api', :class => current_class?('/api') + " nav-link" %></li>
-    <li><%= link_to "Demo", '/demo', :class => current_class?('/demo') + " nav-link" %></li>
+    <li><%= link_to "Home", root_path, :class => current_class?('/') + " nav-link" %></li>
+    <li><%= link_to "API", root_path + "api", :class => current_class?('/api') + " nav-link" %></li>
+    <li><%= link_to "Demo", root_path + "demo", :class => current_class?('/demo') + " nav-link" %></li>
   </ul>
 </nav>
