--- a/app/views/api/v3/demos/show.html.erb
+++ b/app/views/api/v3/demos/show.html.erb
@@ -80,6 +80,7 @@
                         <option value="iso19115_2">iso19115_2</option>
                         <option value="mdJson">mdJson</option>
                         <option value="sbJson">sbJson</option>
+                        <option value="dcat_us">dcat_us</option>
                         <option value="">-none-</option>
                      </select>
                   </div>
