Add Simple HTML Option

--- a/app/views/api/v3/demos/show.html.erb
+++ b/app/views/api/v3/demos/show.html.erb
@@ -73,6 +73,7 @@
                   <label class="description" for="element_3">Writer</label>
                   <div>
                      <select class="element select medium" id="element_3" name="writer">
+                        <option value="simple html">Simple HTML</option>
                         <option value="html" selected="selected">html</option>
                         <option value="fgdc">fgdc</option>
                         <option value="iso19110">iso19110</option>
