--- a/app/views/api/v3/demos/show.html.erb
+++ b/app/views/api/v3/demos/show.html.erb
@@ -73,12 +73,12 @@
                   <label class="description" for="element_3">Writer</label>
                   <div>
                      <select class="element select medium" id="element_3" name="writer">
-                        <option value="simple_html">Simple HTML</option>
                         <option value="html" selected="selected">html</option>
+                        <option value="simple_html">simple html</option>
                         <option value="fgdc">fgdc</option>
                         <option value="iso19110">iso19110</option>
-                        <option value="iso19115_1">iso19115_1</option>
-                        <option value="iso19115_2">iso19115_2</option>
+                        <option value="iso19115_3">iso19115_3</option>
+                        <option value="iso19115_2">iso19115_2/19139 (deprecated)</option>
                         <option value="mdJson">mdJson</option>
                         <option value="sbJson">sbJson</option>
                         <option value="">-none-</option>
