--- a/app/views/api/writers/index.html.erb
+++ b/app/views/api/writers/index.html.erb
@@ -23,11 +23,11 @@
  : Federal Geographic Data Committee's Content Standard for Digital Geospatial Metadata - FGDC-STD-001-1998
  Includes Biological Data Profile
 
- [iso19115_1](./writers/iso19115_1)
+ [iso19115_3](./writers/iso19115_3)
 
  : International Standards Organization Geographic Information - Metadata 19115-1:2014
 
- [iso19115_2](./writers/iso19115_2)
+ [iso19115_2/19139 (deprecated)](./writers/iso19115_2)
 
  : International Standards Organization Geographic Information - Metadata 19115-2:2009
 
