--- a/app/views/api/v3/api/show.html.erb
+++ b/app/views/api/v3/api/show.html.erb
@@ -69,7 +69,7 @@
       > __reader__= [mdJson | fgdc | sbJson] *required*
        : specifies a reader for the mdTranslator
       >
-      > __writer__= [html | simple_html | fgdc | iso19115_3 | iso19115_2 | iso19110 | mdJson | sbJson]
+      > __writer__= [html | simple_html | fgdc | iso19115_3 | iso19115_2 | iso19115_1 | iso19110 | mdJson | sbJson]
        : specifies a writer for the mdTranslator; <br> a null writer will validate input only
       >
       > __validate__= [none | __normal__ | strict]
