--- a/app/views/api/v3/demos/show.html.erb
+++ b/app/views/api/v3/demos/show.html.erb
@@ -78,9 +78,10 @@
                         <option value="fgdc">fgdc</option>
                         <option value="iso19110">iso19110</option>
                         <option value="iso19115_3">iso19115_3</option>
-                        <option value="iso19115_2">iso19115_2/19139 (deprecated)</option>
                         <option value="mdJson">mdJson</option>
                         <option value="sbJson">sbJson</option>
+                        <option value="iso19115_3">iso19115_1 (deprecated)</option>
+                        <option value="iso19115_2">iso19115_2/19139 (deprecated)</option>
                         <option value="">-none-</option>
                      </select>
                   </div>
