Update Welcome Text

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -55,8 +55,8 @@ Alaska Ocean Observing Systems (AOOS), Nuna Technologies, U.S. Fish & Wildlife S
 National Climate Change and Wildlife Science Centers (NCCWSC - USGS).  Together these organizations developed
 the six extensible components of the ADIwg ISO Metadata Developer's Toolkit listed below:
 
- * __mdJson__ - a simple but thorough JSON format for scientific metadata that fully supports the ISO 19115-1,
- ISO 19115-2, ISO 19110, FGDC, and other metadata standards.
+ * __mdJson__ - a simple but thorough JSON format for scientific metadata that fully supports the ISO 19115-1 (via ISO 19115-3),
+ ISO 19115-2/19139 (deprecated), ISO 19115-3, ISO 19110, FGDC, and other metadata standards.
  * __mdTranslator__ - a public hosted web service for translation of mdJson to other metadata
  standards.  The mdTranslator is also available as a Ruby Gem 'adiwg-mdtranslator' and as source
  code from our GitHub repository.
