Add DCAT US Option to Writers Dropdown

--- a/app/views/api/v3/demos/show.html.erb
+++ b/app/views/api/v3/demos/show.html.erb
@@ -76,6 +76,7 @@
                         <option value="simple_html">Simple HTML</option>
                         <option value="html" selected="selected">html</option>
                         <option value="fgdc">fgdc</option>
+                        <option value="dcat_us">dcat_us</option>
                         <option value="iso19110">iso19110</option>
                         <option value="iso19115_1">iso19115_1</option>
                         <option value="iso19115_2">iso19115_2</option>
